parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> bloc
Rule 2     bloc -> bloc statement
Rule 3     bloc -> statement
Rule 4     statement -> IF LPAREN expression RPAREN LBRACE bloc RBRACE SEMI
Rule 5     statement -> IF LPAREN expression RPAREN LBRACE bloc RBRACE condition
Rule 6     condition -> ELSE LBRACE bloc RBRACE SEMI
Rule 7     statement -> WHILE LPAREN expression RPAREN LBRACE bloc RBRACE SEMI
Rule 8     statement -> FOR LPAREN statement expression SEMI expression RPAREN LBRACE bloc RBRACE SEMI
Rule 9     statement -> FOR LPAREN statement expression SEMI statement RPAREN LBRACE bloc RBRACE SEMI
Rule 10    statement -> VOID NAME LPAREN RPAREN LBRACE bloc RBRACE SEMI
Rule 11    statement -> VOID NAME LPAREN parameters_function RPAREN LBRACE bloc RBRACE SEMI
Rule 12    statement -> NAME LPAREN RPAREN SEMI
Rule 13    statement -> NAME LPAREN parameters RPAREN SEMI
Rule 14    statement -> FUNCTION NAME LPAREN RPAREN LBRACE bloc return_statement RBRACE SEMI
Rule 15    statement -> FUNCTION NAME LPAREN parameters_function RPAREN LBRACE bloc return_statement RBRACE SEMI
Rule 16    return_statement -> RETURN expression SEMI
Rule 17    parameters_function -> NAME COMMA parameters_function
Rule 18    parameters_function -> NAME
Rule 19    parameters -> expression COMMA parameters
Rule 20    parameters -> expression
Rule 21    statement -> NAME EQUAL expression SEMI
Rule 22    statement -> PRINT LPAREN expression_print RPAREN SEMI
Rule 23    expression_print -> expression COMMA expression_print
Rule 24    expression_print -> expression
Rule 25    expression -> expression PLUS expression
Rule 26    expression -> expression MINUS expression
Rule 27    expression -> expression TIMES expression
Rule 28    expression -> expression OR expression
Rule 29    expression -> expression AND expression
Rule 30    expression -> expression INF expression
Rule 31    expression -> expression SUP expression
Rule 32    expression -> expression DIVIDE expression
Rule 33    expression -> expression EQUALS expression
Rule 34    expression -> LPAREN expression RPAREN
Rule 35    expression -> expression INF NAME INF expression
Rule 36    expression -> expression SUP NAME SUP expression
Rule 37    statement -> NAME PLUSPLUS SEMI
Rule 38    statement -> NAME PLUSEQUAL expression SEMI
Rule 39    expression -> NUMBER
Rule 40    expression -> NAME
Rule 41    statement -> NAME LBRACKET RBRACKET EQUAL LBRACKET array_values RBRACKET SEMI
Rule 42    statement -> NAME LBRACKET expression RBRACKET EQUAL expression SEMI
Rule 43    expression -> NAME LBRACKET expression RBRACKET
Rule 44    array_values -> expression
Rule 45    array_values -> array_values COMMA expression

Terminals, with rules where they appear

AND                  : 29
COMMA                : 17 19 23 45
DIVIDE               : 32
ELSE                 : 6
EQUAL                : 21 41 42
EQUALS               : 33
FOR                  : 8 9
FUNCTION             : 14 15
IF                   : 4 5
INF                  : 30 35 35
LBRACE               : 4 5 6 7 8 9 10 11 14 15
LBRACKET             : 41 41 42 43
LPAREN               : 4 5 7 8 9 10 11 12 13 14 15 22 34
MINUS                : 26
NAME                 : 10 11 12 13 14 15 17 18 21 35 36 37 38 40 41 42 43
NUMBER               : 39
OR                   : 28
PLUS                 : 25
PLUSEQUAL            : 38
PLUSPLUS             : 37
PRINT                : 22
RBRACE               : 4 5 6 7 8 9 10 11 14 15
RBRACKET             : 41 41 42 43
RETURN               : 16
RPAREN               : 4 5 7 8 9 10 11 12 13 14 15 22 34
SEMI                 : 4 6 7 8 8 9 9 10 11 12 13 14 15 16 21 22 37 38 41 42
SUP                  : 31 36 36
TIMES                : 27
VOID                 : 10 11
WHILE                : 7
error                : 

Nonterminals, with rules where they appear

array_values         : 41 45
bloc                 : 1 2 4 5 6 7 8 9 10 11 14 15
condition            : 5
expression           : 4 5 7 8 8 9 16 19 20 21 23 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 35 35 36 36 38 42 42 43 44 45
expression_print     : 22 23
parameters           : 13 19
parameters_function  : 11 15 17
return_statement     : 14 15
start                : 0
statement            : 2 3 8 9 9

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . bloc
    (2) bloc -> . bloc statement
    (3) bloc -> . statement
    (4) statement -> . IF LPAREN expression RPAREN LBRACE bloc RBRACE SEMI
    (5) statement -> . IF LPAREN expression RPAREN LBRACE bloc RBRACE condition
    (7) statement -> . WHILE LPAREN expression RPAREN LBRACE bloc RBRACE SEMI
    (8) statement -> . FOR LPAREN statement expression SEMI expression RPAREN LBRACE bloc RBRACE SEMI
    (9) statement -> . FOR LPAREN statement expression SEMI statement RPAREN LBRACE bloc RBRACE SEMI
    (10) statement -> . VOID NAME LPAREN RPAREN LBRACE bloc RBRACE SEMI
    (11) statement -> . VOID NAME LPAREN parameters_function RPAREN LBRACE bloc RBRACE SEMI
    (12) statement -> . NAME LPAREN RPAREN SEMI
    (13) statement -> . NAME LPAREN parameters RPAREN SEMI
    (14) statement -> . FUNCTION NAME LPAREN RPAREN LBRACE bloc return_statement RBRACE SEMI
    (15) statement -> . FUNCTION NAME LPAREN parameters_function RPAREN LBRACE bloc return_statement RBRACE SEMI
    (21) statement -> . NAME EQUAL expression SEMI
    (22) statement -> . PRINT LPAREN expression_print RPAREN SEMI
    (37) statement -> . NAME PLUSPLUS SEMI
    (38) statement -> . NAME PLUSEQUAL expression SEMI
    (41) statement -> . NAME LBRACKET RBRACKET EQUAL LBRACKET array_values RBRACKET SEMI
    (42) statement -> . NAME LBRACKET expression RBRACKET EQUAL expression SEMI

    IF              shift and go to state 4
    WHILE           shift and go to state 5
    FOR             shift and go to state 6
    VOID            shift and go to state 7
    NAME            shift and go to state 8
    FUNCTION        shift and go to state 9
    PRINT           shift and go to state 10

    start                          shift and go to state 1
    bloc                           shift and go to state 2
    statement                      shift and go to state 3

state 1

    (0) S' -> start .



state 2

    (1) start -> bloc .
    (2) bloc -> bloc . statement
    (4) statement -> . IF LPAREN expression RPAREN LBRACE bloc RBRACE SEMI
    (5) statement -> . IF LPAREN expression RPAREN LBRACE bloc RBRACE condition
    (7) statement -> . WHILE LPAREN expression RPAREN LBRACE bloc RBRACE SEMI
    (8) statement -> . FOR LPAREN statement expression SEMI expression RPAREN LBRACE bloc RBRACE SEMI
    (9) statement -> . FOR LPAREN statement expression SEMI statement RPAREN LBRACE bloc RBRACE SEMI
    (10) statement -> . VOID NAME LPAREN RPAREN LBRACE bloc RBRACE SEMI
    (11) statement -> . VOID NAME LPAREN parameters_function RPAREN LBRACE bloc RBRACE SEMI
    (12) statement -> . NAME LPAREN RPAREN SEMI
    (13) statement -> . NAME LPAREN parameters RPAREN SEMI
    (14) statement -> . FUNCTION NAME LPAREN RPAREN LBRACE bloc return_statement RBRACE SEMI
    (15) statement -> . FUNCTION NAME LPAREN parameters_function RPAREN LBRACE bloc return_statement RBRACE SEMI
    (21) statement -> . NAME EQUAL expression SEMI
    (22) statement -> . PRINT LPAREN expression_print RPAREN SEMI
    (37) statement -> . NAME PLUSPLUS SEMI
    (38) statement -> . NAME PLUSEQUAL expression SEMI
    (41) statement -> . NAME LBRACKET RBRACKET EQUAL LBRACKET array_values RBRACKET SEMI
    (42) statement -> . NAME LBRACKET expression RBRACKET EQUAL expression SEMI

    $end            reduce using rule 1 (start -> bloc .)
    IF              shift and go to state 4
    WHILE           shift and go to state 5
    FOR             shift and go to state 6
    VOID            shift and go to state 7
    NAME            shift and go to state 8
    FUNCTION        shift and go to state 9
    PRINT           shift and go to state 10

    statement                      shift and go to state 11

state 3

    (3) bloc -> statement .

    IF              reduce using rule 3 (bloc -> statement .)
    WHILE           reduce using rule 3 (bloc -> statement .)
    FOR             reduce using rule 3 (bloc -> statement .)
    VOID            reduce using rule 3 (bloc -> statement .)
    NAME            reduce using rule 3 (bloc -> statement .)
    FUNCTION        reduce using rule 3 (bloc -> statement .)
    PRINT           reduce using rule 3 (bloc -> statement .)
    $end            reduce using rule 3 (bloc -> statement .)
    RBRACE          reduce using rule 3 (bloc -> statement .)
    RETURN          reduce using rule 3 (bloc -> statement .)


state 4

    (4) statement -> IF . LPAREN expression RPAREN LBRACE bloc RBRACE SEMI
    (5) statement -> IF . LPAREN expression RPAREN LBRACE bloc RBRACE condition

    LPAREN          shift and go to state 12


state 5

    (7) statement -> WHILE . LPAREN expression RPAREN LBRACE bloc RBRACE SEMI

    LPAREN          shift and go to state 13


state 6

    (8) statement -> FOR . LPAREN statement expression SEMI expression RPAREN LBRACE bloc RBRACE SEMI
    (9) statement -> FOR . LPAREN statement expression SEMI statement RPAREN LBRACE bloc RBRACE SEMI

    LPAREN          shift and go to state 14


state 7

    (10) statement -> VOID . NAME LPAREN RPAREN LBRACE bloc RBRACE SEMI
    (11) statement -> VOID . NAME LPAREN parameters_function RPAREN LBRACE bloc RBRACE SEMI

    NAME            shift and go to state 15


state 8

    (12) statement -> NAME . LPAREN RPAREN SEMI
    (13) statement -> NAME . LPAREN parameters RPAREN SEMI
    (21) statement -> NAME . EQUAL expression SEMI
    (37) statement -> NAME . PLUSPLUS SEMI
    (38) statement -> NAME . PLUSEQUAL expression SEMI
    (41) statement -> NAME . LBRACKET RBRACKET EQUAL LBRACKET array_values RBRACKET SEMI
    (42) statement -> NAME . LBRACKET expression RBRACKET EQUAL expression SEMI

    LPAREN          shift and go to state 16
    EQUAL           shift and go to state 17
    PLUSPLUS        shift and go to state 18
    PLUSEQUAL       shift and go to state 19
    LBRACKET        shift and go to state 20


state 9

    (14) statement -> FUNCTION . NAME LPAREN RPAREN LBRACE bloc return_statement RBRACE SEMI
    (15) statement -> FUNCTION . NAME LPAREN parameters_function RPAREN LBRACE bloc return_statement RBRACE SEMI

    NAME            shift and go to state 21


state 10

    (22) statement -> PRINT . LPAREN expression_print RPAREN SEMI

    LPAREN          shift and go to state 22


state 11

    (2) bloc -> bloc statement .

    IF              reduce using rule 2 (bloc -> bloc statement .)
    WHILE           reduce using rule 2 (bloc -> bloc statement .)
    FOR             reduce using rule 2 (bloc -> bloc statement .)
    VOID            reduce using rule 2 (bloc -> bloc statement .)
    NAME            reduce using rule 2 (bloc -> bloc statement .)
    FUNCTION        reduce using rule 2 (bloc -> bloc statement .)
    PRINT           reduce using rule 2 (bloc -> bloc statement .)
    $end            reduce using rule 2 (bloc -> bloc statement .)
    RBRACE          reduce using rule 2 (bloc -> bloc statement .)
    RETURN          reduce using rule 2 (bloc -> bloc statement .)


state 12

    (4) statement -> IF LPAREN . expression RPAREN LBRACE bloc RBRACE SEMI
    (5) statement -> IF LPAREN . expression RPAREN LBRACE bloc RBRACE condition
    (25) expression -> . expression PLUS expression
    (26) expression -> . expression MINUS expression
    (27) expression -> . expression TIMES expression
    (28) expression -> . expression OR expression
    (29) expression -> . expression AND expression
    (30) expression -> . expression INF expression
    (31) expression -> . expression SUP expression
    (32) expression -> . expression DIVIDE expression
    (33) expression -> . expression EQUALS expression
    (34) expression -> . LPAREN expression RPAREN
    (35) expression -> . expression INF NAME INF expression
    (36) expression -> . expression SUP NAME SUP expression
    (39) expression -> . NUMBER
    (40) expression -> . NAME
    (43) expression -> . NAME LBRACKET expression RBRACKET

    LPAREN          shift and go to state 23
    NUMBER          shift and go to state 26
    NAME            shift and go to state 25

    expression                     shift and go to state 24

state 13

    (7) statement -> WHILE LPAREN . expression RPAREN LBRACE bloc RBRACE SEMI
    (25) expression -> . expression PLUS expression
    (26) expression -> . expression MINUS expression
    (27) expression -> . expression TIMES expression
    (28) expression -> . expression OR expression
    (29) expression -> . expression AND expression
    (30) expression -> . expression INF expression
    (31) expression -> . expression SUP expression
    (32) expression -> . expression DIVIDE expression
    (33) expression -> . expression EQUALS expression
    (34) expression -> . LPAREN expression RPAREN
    (35) expression -> . expression INF NAME INF expression
    (36) expression -> . expression SUP NAME SUP expression
    (39) expression -> . NUMBER
    (40) expression -> . NAME
    (43) expression -> . NAME LBRACKET expression RBRACKET

    LPAREN          shift and go to state 23
    NUMBER          shift and go to state 26
    NAME            shift and go to state 25

    expression                     shift and go to state 27

state 14

    (8) statement -> FOR LPAREN . statement expression SEMI expression RPAREN LBRACE bloc RBRACE SEMI
    (9) statement -> FOR LPAREN . statement expression SEMI statement RPAREN LBRACE bloc RBRACE SEMI
    (4) statement -> . IF LPAREN expression RPAREN LBRACE bloc RBRACE SEMI
    (5) statement -> . IF LPAREN expression RPAREN LBRACE bloc RBRACE condition
    (7) statement -> . WHILE LPAREN expression RPAREN LBRACE bloc RBRACE SEMI
    (8) statement -> . FOR LPAREN statement expression SEMI expression RPAREN LBRACE bloc RBRACE SEMI
    (9) statement -> . FOR LPAREN statement expression SEMI statement RPAREN LBRACE bloc RBRACE SEMI
    (10) statement -> . VOID NAME LPAREN RPAREN LBRACE bloc RBRACE SEMI
    (11) statement -> . VOID NAME LPAREN parameters_function RPAREN LBRACE bloc RBRACE SEMI
    (12) statement -> . NAME LPAREN RPAREN SEMI
    (13) statement -> . NAME LPAREN parameters RPAREN SEMI
    (14) statement -> . FUNCTION NAME LPAREN RPAREN LBRACE bloc return_statement RBRACE SEMI
    (15) statement -> . FUNCTION NAME LPAREN parameters_function RPAREN LBRACE bloc return_statement RBRACE SEMI
    (21) statement -> . NAME EQUAL expression SEMI
    (22) statement -> . PRINT LPAREN expression_print RPAREN SEMI
    (37) statement -> . NAME PLUSPLUS SEMI
    (38) statement -> . NAME PLUSEQUAL expression SEMI
    (41) statement -> . NAME LBRACKET RBRACKET EQUAL LBRACKET array_values RBRACKET SEMI
    (42) statement -> . NAME LBRACKET expression RBRACKET EQUAL expression SEMI

    IF              shift and go to state 4
    WHILE           shift and go to state 5
    FOR             shift and go to state 6
    VOID            shift and go to state 7
    NAME            shift and go to state 8
    FUNCTION        shift and go to state 9
    PRINT           shift and go to state 10

    statement                      shift and go to state 28

state 15

    (10) statement -> VOID NAME . LPAREN RPAREN LBRACE bloc RBRACE SEMI
    (11) statement -> VOID NAME . LPAREN parameters_function RPAREN LBRACE bloc RBRACE SEMI

    LPAREN          shift and go to state 29


state 16

    (12) statement -> NAME LPAREN . RPAREN SEMI
    (13) statement -> NAME LPAREN . parameters RPAREN SEMI
    (19) parameters -> . expression COMMA parameters
    (20) parameters -> . expression
    (25) expression -> . expression PLUS expression
    (26) expression -> . expression MINUS expression
    (27) expression -> . expression TIMES expression
    (28) expression -> . expression OR expression
    (29) expression -> . expression AND expression
    (30) expression -> . expression INF expression
    (31) expression -> . expression SUP expression
    (32) expression -> . expression DIVIDE expression
    (33) expression -> . expression EQUALS expression
    (34) expression -> . LPAREN expression RPAREN
    (35) expression -> . expression INF NAME INF expression
    (36) expression -> . expression SUP NAME SUP expression
    (39) expression -> . NUMBER
    (40) expression -> . NAME
    (43) expression -> . NAME LBRACKET expression RBRACKET

    RPAREN          shift and go to state 30
    LPAREN          shift and go to state 23
    NUMBER          shift and go to state 26
    NAME            shift and go to state 25

    parameters                     shift and go to state 31
    expression                     shift and go to state 32

state 17

    (21) statement -> NAME EQUAL . expression SEMI
    (25) expression -> . expression PLUS expression
    (26) expression -> . expression MINUS expression
    (27) expression -> . expression TIMES expression
    (28) expression -> . expression OR expression
    (29) expression -> . expression AND expression
    (30) expression -> . expression INF expression
    (31) expression -> . expression SUP expression
    (32) expression -> . expression DIVIDE expression
    (33) expression -> . expression EQUALS expression
    (34) expression -> . LPAREN expression RPAREN
    (35) expression -> . expression INF NAME INF expression
    (36) expression -> . expression SUP NAME SUP expression
    (39) expression -> . NUMBER
    (40) expression -> . NAME
    (43) expression -> . NAME LBRACKET expression RBRACKET

    LPAREN          shift and go to state 23
    NUMBER          shift and go to state 26
    NAME            shift and go to state 25

    expression                     shift and go to state 33

state 18

    (37) statement -> NAME PLUSPLUS . SEMI

    SEMI            shift and go to state 34


state 19

    (38) statement -> NAME PLUSEQUAL . expression SEMI
    (25) expression -> . expression PLUS expression
    (26) expression -> . expression MINUS expression
    (27) expression -> . expression TIMES expression
    (28) expression -> . expression OR expression
    (29) expression -> . expression AND expression
    (30) expression -> . expression INF expression
    (31) expression -> . expression SUP expression
    (32) expression -> . expression DIVIDE expression
    (33) expression -> . expression EQUALS expression
    (34) expression -> . LPAREN expression RPAREN
    (35) expression -> . expression INF NAME INF expression
    (36) expression -> . expression SUP NAME SUP expression
    (39) expression -> . NUMBER
    (40) expression -> . NAME
    (43) expression -> . NAME LBRACKET expression RBRACKET

    LPAREN          shift and go to state 23
    NUMBER          shift and go to state 26
    NAME            shift and go to state 25

    expression                     shift and go to state 35

state 20
